perf: make async request to crawl web pages